Linux: upgrade to JDK 21